--- a/SteganoServiveProject/Test.html
+++ b/SteganoServiveProject/Test.html
@@ -1,9 +1,9 @@
 <HTML>
 <BODY>
-<FORM name="steganoapi" method="post">
+<FORM name="steganoapi" method="post" enctype="multipart/form-data">
     <INPUT type="text" name="method" value="encode" hidden/>
     <INPUT type="text" name="msg"/>
-    <INPUT type = FILE name="image" action = "http://localhost:61189/api/CryptUtility" REQUIRED/> 
+    <INPUT type = FILE name="image" action = "http://localhost:61189/api/CryptUtility"  REQUIRED/> 
     <INPUT type = SUBMIT />
 </FORM>
 </BODY>
